src/libs/antares/reservesParsing/SymmetryFieldParser.cpp

// Generated from ./src/libs/antares/reservesParsing/SymmetryField.g4 by ANTLR 4.13.2


#include "SymmetryFieldVisitor.h"

#include "SymmetryFieldParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SymmetryFieldParserStaticData final {
  SymmetryFieldParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SymmetryFieldParserStaticData(const SymmetryFieldParserStaticData&) = delete;
  SymmetryFieldParserStaticData(SymmetryFieldParserStaticData&&) = delete;
  SymmetryFieldParserStaticData& operator=(const SymmetryFieldParserStaticData&) = delete;
  SymmetryFieldParserStaticData& operator=(SymmetryFieldParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag symmetryfieldParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SymmetryFieldParserStaticData> symmetryfieldParserStaticData = nullptr;

void symmetryfieldParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (symmetryfieldParserStaticData != nullptr) {
    return;
  }
#else
  assert(symmetryfieldParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SymmetryFieldParserStaticData>(
    std::vector<std::string>{
      "symmetryField", "elementList", "element"
    },
    std::vector<std::string>{
      "", "','", "'['", "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  symmetryfieldParserStaticData = std::move(staticData);
}

}

SymmetryFieldParser::SymmetryFieldParser(TokenStream *input) : SymmetryFieldParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SymmetryFieldParser::SymmetryFieldParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SymmetryFieldParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *symmetryfieldParserStaticData->atn, symmetryfieldParserStaticData->decisionToDFA, symmetryfieldParserStaticData->sharedContextCache, options);
}

SymmetryFieldParser::~SymmetryFieldParser() {
  delete _interpreter;
}

const atn::ATN& SymmetryFieldParser::getATN() const {
  return *symmetryfieldParserStaticData->atn;
}

std::string SymmetryFieldParser::getGrammarFileName() const {
  return "SymmetryField.g4";
}

const std::vector<std::string>& SymmetryFieldParser::getRuleNames() const {
  return symmetryfieldParserStaticData->ruleNames;
}

const dfa::Vocabulary& SymmetryFieldParser::getVocabulary() const {
  return symmetryfieldParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SymmetryFieldParser::getSerializedATN() const {
  return symmetryfieldParserStaticData->serializedATN;
}


//----------------- SymmetryFieldContext ------------------------------------------------------------------

SymmetryFieldParser::SymmetryFieldContext::SymmetryFieldContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SymmetryFieldParser::ElementListContext *> SymmetryFieldParser::SymmetryFieldContext::elementList() {
  return getRuleContexts<SymmetryFieldParser::ElementListContext>();
}

SymmetryFieldParser::ElementListContext* SymmetryFieldParser::SymmetryFieldContext::elementList(size_t i) {
  return getRuleContext<SymmetryFieldParser::ElementListContext>(i);
}


size_t SymmetryFieldParser::SymmetryFieldContext::getRuleIndex() const {
  return SymmetryFieldParser::RuleSymmetryField;
}


std::any SymmetryFieldParser::SymmetryFieldContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SymmetryFieldVisitor*>(visitor))
    return parserVisitor->visitSymmetryField(this);
  else
    return visitor->visitChildren(this);
}

SymmetryFieldParser::SymmetryFieldContext* SymmetryFieldParser::symmetryField() {
  SymmetryFieldContext *_localctx = _tracker.createInstance<SymmetryFieldContext>(_ctx, getState());
  enterRule(_localctx, 0, SymmetryFieldParser::RuleSymmetryField);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(6);
    elementList();
    setState(11);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SymmetryFieldParser::T__0) {
      setState(7);
      match(SymmetryFieldParser::T__0);
      setState(8);
      elementList();
      setState(13);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementListContext ------------------------------------------------------------------

SymmetryFieldParser::ElementListContext::ElementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SymmetryFieldParser::ElementContext *> SymmetryFieldParser::ElementListContext::element() {
  return getRuleContexts<SymmetryFieldParser::ElementContext>();
}

SymmetryFieldParser::ElementContext* SymmetryFieldParser::ElementListContext::element(size_t i) {
  return getRuleContext<SymmetryFieldParser::ElementContext>(i);
}


size_t SymmetryFieldParser::ElementListContext::getRuleIndex() const {
  return SymmetryFieldParser::RuleElementList;
}


std::any SymmetryFieldParser::ElementListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SymmetryFieldVisitor*>(visitor))
    return parserVisitor->visitElementList(this);
  else
    return visitor->visitChildren(this);
}

SymmetryFieldParser::ElementListContext* SymmetryFieldParser::elementList() {
  ElementListContext *_localctx = _tracker.createInstance<ElementListContext>(_ctx, getState());
  enterRule(_localctx, 2, SymmetryFieldParser::RuleElementList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(14);
    match(SymmetryFieldParser::T__1);
    setState(15);
    element();
    setState(20);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SymmetryFieldParser::T__0) {
      setState(16);
      match(SymmetryFieldParser::T__0);
      setState(17);
      element();
      setState(22);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(23);
    match(SymmetryFieldParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

SymmetryFieldParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SymmetryFieldParser::ElementContext::ID() {
  return getToken(SymmetryFieldParser::ID, 0);
}


size_t SymmetryFieldParser::ElementContext::getRuleIndex() const {
  return SymmetryFieldParser::RuleElement;
}


std::any SymmetryFieldParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SymmetryFieldVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

SymmetryFieldParser::ElementContext* SymmetryFieldParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 4, SymmetryFieldParser::RuleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    match(SymmetryFieldParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void SymmetryFieldParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  symmetryfieldParserInitialize();
#else
  ::antlr4::internal::call_once(symmetryfieldParserOnceFlag, symmetryfieldParserInitialize);
#endif
}
